# dawn_cli_old

./: .sqllsrc.json  Cargo.toml
src/: cli.rs  config.rs  db.rs  main.rs  table.rs  todo.rs
src/sql/: schema.sql  seed.sql  trigger.sql
