[package]
name = "dawn_cli"
version = "0.1.0"
authors = ["KSY <sykim.p508@gmail.com>"]
edition = "2021"
description = "Command-line to-do management"
repository = "https://github.com/rvnkcode/dawn_cli"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
dirs = "5.0.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
prettytable-rs = "^0.10"
